take away more unnecessary files

--- a/PIMS_Prototype/content/MaintainMember.html
+++ b/PIMS_Prototype/content/MaintainMember.html
@@ -348,7 +348,113 @@
                 <tr><td>Cell Phone</td><td><input id="Contact_LegalGuardian_CellPhone" type="text" class="isEdittable isSmallField isPhoneNumber"> </td></tr>
                 <!--https://igorescobar.github.io/jQuery-Mask-Plugin/-->
 
+                <tr><td /><td /></tr>
                 <tr><td>Alberta Health Care Number</td><td><input id="AlbertaHealthCareNumber" type="text" class="isEdittable isSmallField isAHC"> </td></tr>
+                <tr><td>Have Photo ?</td><td><input id="HavePhoto" type="checkbox" class="isEdittable isRequired"> </td></tr>
+                <tr>
+                    <td>Primary Source Of Income</td>
+                    <td>
+                        <select id="PrimarySourceOfIncome" class="isEdittable isRequired isSmallField">
+                            <option value=""></option>
+                            <option value="1">Accident Insurance</option>
+                            <option value="2">Alberta Income for the Severely Handicapped</option>
+                            <option value="3">Alberta Works</option>
+                            <option value="4">Canada Pension Plan</option>
+                            <option value="5">Canada Pension Plan Disability</option>
+                            <option value="6">Children Family Services</option>
+                            <option value="7">Comfort Allowance</option>
+                            <option value="8">Disability</option>
+                            <option value="9">Disability Pension</option>
+                            <option value="10">Employment Insurance</option>
+                            <option value="11">Family</option>
+                            <option value="12">Family Trust Fund</option>
+                            <option value="13">Full-Time Employment</option>
+                            <option value="14">Goods and Services Tax Rebate</option>
+                            <option value="15">Income Support</option>
+                            <option value="16">Inheritance Comfort Allowance</option>
+                            <option value="17">Long Term Disability</option>
+                            <option value="18">Medical Employment Insurance</option>
+                            <option value="19">Medical Welfare</option>
+                            <option value="20">NorthWest Territories Funding</option>
+                            <option value="21">Ontario Disability Support Program</option>
+                            <option value="22">Old Age Security</option>
+                            <option value="23">Parents</option>
+                            <option value="24">Part-Time Employment</option>
+                            <option value="25">Pension</option>
+                            <option value="26">Savings</option>
+                            <option value="27">Senior Pension</option>
+                        </select>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>Secondary Source Of Income</td>
+                    <td>
+                        <select id="SecondarySourceOfIncome" class="isEdittable isSmallField">
+                            <option value=""></option>
+                            <option value="1">Accident Insurance</option>
+                            <option value="2">Alberta Income for the Severely Handicapped</option>
+                            <option value="3">Alberta Works</option>
+                            <option value="4">Canada Pension Plan</option>
+                            <option value="5">Canada Pension Plan Disability</option>
+                            <option value="6">Children Family Services</option>
+                            <option value="7">Comfort Allowance</option>
+                            <option value="8">Disability</option>
+                            <option value="9">Disability Pension</option>
+                            <option value="10">Employment Insurance</option>
+                            <option value="11">Family</option>
+                            <option value="12">Family Trust Fund</option>
+                            <option value="13">Full-Time Employment</option>
+                            <option value="14">Goods and Services Tax Rebate</option>
+                            <option value="15">Income Support</option>
+                            <option value="16">Inheritance Comfort Allowance</option>
+                            <option value="17">Long Term Disability</option>
+                            <option value="18">Medical Employment Insurance</option>
+                            <option value="19">Medical Welfare</option>
+                            <option value="20">NorthWest Territories Funding</option>
+                            <option value="21">Ontario Disability Support Program</option>
+                            <option value="22">Old Age Security</option>
+                            <option value="23">Parents</option>
+                            <option value="24">Part-Time Employment</option>
+                            <option value="25">Pension</option>
+                            <option value="26">Savings</option>
+                            <option value="27">Senior Pension</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>First Language</td>
+                    <td>
+                        <select id="FirstLanguage" class="isEdittable isRequired isSmallField">
+                            <option value=""></option>
+                            <option value="1">English</option>
+                            <option value="2">Arabic</option>
+                            <option value="3">Hebrew</option>
+                            <option value="4">French</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr><td>Indigenous Background</td><td><input id="IndigenousBackground" type="checkbox" class="isEdittable isRequired"> </td></tr>
+                <tr>
+                    <td>Highest Level Of Education</td>
+                    <td>
+                        <select id="HighestLevelOfEducation" class="isEdittable isRequired isSmallField">
+                            <option value=""></option>
+                            <option value="1">Kindergarden to Grade 6</option>
+                            <option value="2">Some Junior High School</option>
+                            <option value="3">Junior High School</option>
+                            <option value="4">Some High School</option>
+                            <option value="5">High School (or equivalent)</option>
+                            <option value="6">Some Post-Secondary</option>
+                            <option value="7">Trade/Technical School</option>
+                            <option value="8">Bachelor degree</option>
+                            <option value="9">Master degree</option>
+                            <option value="10">Professional degree</option>
+                            <option value="11">Doctorate degree</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr><td>History Of Violence ?</td><td><input id="HistoryOfViolence" type="checkbox" class="isEdittable isRequired"> </td></tr>
 
             </table>
         </fieldset>
