--- a/PIMS_Prototype/content/about.html
+++ b/PIMS_Prototype/content/about.html
@@ -21,37 +21,23 @@
 </head>
 
 <span id="menu"></span>
-<span id="menu"></span>
 
-<body class="manpage">
+<body class="body-content">
+    <div>
+        <img src="../images/ProsperPlace_Logo2.png" width="200" />
+    </div>
+    <br />
 
-    <div id="header"><h1 class="short">About James' Git Tutorial</h1></div>
-    <div id="content">
-        <div class="sect1">
-            <p>Created by me (<a href="mailto:fowler.tom@gmail.com&amp;subject=Your Git Tutorial&amp;body=Hi, I'm using your tutorial.">James Fowler</a>) to teach myself Git.</p>
-            <p>This website is stored in <a href="https://github.com/" >GitHub</a>, thereby forcing me to learn about Git to store the website artifacts.</p>
-            <p>This technique (forcing a tutorial about Git to be stored in Git repository <a href="https://github.com/" >GitHub</a>) is a variant on <a href="https://en.wikipedia.org/wiki/Eating_your_own_dog_food"> dogfooding.</a></p>
-            <p>This web-site was created using the following technologies:</p>
-            <div class="colist arabic">
-                <div>
-                    <ul>
-                        <li><a href="https://www.w3schools.com/html/" >HTML (of course)</a></li>
-                        <li><a href="https://www.w3schools.com/js/default.asp" >JavaScript (of course)</a></li>
-                        <li><a href="https://learngitbranching.js.org/" >jQuery</a></li>
-                        <li><a href="https://www.w3schools.com/bootstrap/bootstrap_navbar.asp" >BootStrap (NavBar)</a></li>
-                        <li><a href="https://fontawesome.com/v4.7.0/" >Font-Awesome 4.70</a></li>
-                        <li><a href="https://fonts.google.com/" >Google Fonts (Droid Sans Mono, Noto Serif, Open Sans)</a></li>
-                        <li style ="color: black;">CSS Styles copied from the <a href="https://git.github.io/htmldocs/git.html" >Git Manual Page</a></li>
-                    </ul>
-                </div>
-            </div>
-            <p>All copyrights were respected. If any copyrights were infringed upon, please <a href="mailto:fowler.tom@gmail.com&amp;subject=Your Git Tutorial&amp;body=Hi, your site may infringe upon some copyrights."> let me know</a>.</p>
+<h1 class="short">About PIMS</h1>
+
+
+    <div class="viewContainer">
+        Prosper Place Information Member System
     </div>
-    </div>
-    </body>
+</body>
 
 <hr align="left">
-<footer>V 0.9</footer>
+<footer>V 1.0</footer>
 
 </html>
 
