finish up emergency contacts

--- a/PIMS_Prototype/content/MaintainMember.html
+++ b/PIMS_Prototype/content/MaintainMember.html
@@ -455,6 +455,11 @@
                     </td>
                 </tr>
                 <tr><td>History Of Violence ?</td><td><input id="HistoryOfViolence" type="checkbox" class="isEdittable isRequired"> </td></tr>
+                <tr><td>Violence Notes</td><td><textarea id="ViolenceNotes" class="isEdittable isLargeField"></textarea></td></tr>
+                <tr><td>Has Anger Issues ?</td><td><input id="HasAngerIssues" type="checkbox" class="isEdittable isRequired"> </td></tr>
+                <tr><td>Has a Criminal Record</td><td><input id="HasCriminalRecord" type="checkbox" class="isEdittable"> </td></tr>
+                <tr><td>Criminal Record Notes</td><td><textarea id="CriminalRecordNotes" class="isEdittable isLargeField"></textarea></td></tr>
+                <tr><td>Is On Probation / Parole ?</td><td><input id="IsOnProbationParole" type="checkbox" class="isEdittable isRequired"> </td></tr>
 
             </table>
         </fieldset>
