start adjusting screens

--- a/PIMS_Prototype/content/welcome.html
+++ b/PIMS_Prototype/content/welcome.html
@@ -28,12 +28,12 @@
     </div>
     <br />
 
-<h1 class="short">PIMS</h1>
-
-
+<h1 class="short">Welcome To PIMS</h1>
+    
+    <div class="viewContainer">
+        Prosper Place Information Member System
+    </div>
 </body>
-
-<footer>V 1.0</footer>
 
 </html>
 
