get dashboard working

--- a/PIMS_Prototype/content/MemberInformation.html
+++ b/PIMS_Prototype/content/MemberInformation.html
@@ -42,10 +42,24 @@
 <span id="menu"></span>
 
 <body class="body-content">
-    <div>
-        <img src="../images/ProsperPlace_Logo2.png" width="200" />
+
+    <div class="viewContainer">
+        <fieldset class="fieldsetDashboard">
+            <table ID="dashboard" class="tableDashboard">
+                <tr>
+                    <td><img src="../images/ProsperPlace_Logo2.png" width="200" /></td>
+                    <td>
+                        <br />
+                        <div><b>Member:</b> John Smith</div>
+                        <div><b>Date of Birth:</b> May 12, 1980</div>
+                        <div><b>Phone Number:</b> 780-123-4567</div>
+                        <div><b>Member Since:</b> December 3, 2018</div>
+                    </td>
+
+                </tr>
+            </table>
+        </fieldset>
     </div>
-    <br />
 
     <div class="viewContainer">
 
@@ -1112,7 +1126,7 @@
 
             </table>
         </fieldset>-->
-        
+
     </div>
 </body>
 
