put in required fields.

--- a/PIMS_Prototype/content/MaintainMember.html
+++ b/PIMS_Prototype/content/MaintainMember.html
@@ -780,7 +780,7 @@
                 <tr><td>Orientation Date</td><td><input id="OrientationDate" type="text" class="isDatePicker isSmallField"></td></tr>
                 <tr><td>Last Visited</td><td><input id="LastVisited" type="text" class="isDateTimePicker isSmallField"></td></tr>
                 <tr><td>Last Contact</td><td><input id="LastContact" type="text" class="isDateTimePicker isSmallField"></td></tr>
-                <tr><td>How Can Prosper Place Support ?</td><td><textarea id="HowCanProsperPlaceSupport" class="isEdittable isLargeField"></textarea></td></tr>
+                <tr><td>How Can Prosper Place Support ?</td><td><textarea id="HowCanProsperPlaceSupport" class="isEdittable isLargeField isRequired "></textarea></td></tr>
                 <tr><td>Activities To Support Wellness</td><td><textarea id="ActivitiesToSupportWellness" class="isEdittable isLargeField"></textarea></td></tr>
                 <tr><td>Support System</td><td><textarea id="SupportSystem" class="isEdittable isLargeField"></textarea></td></tr>
                 <tr><td>How Did Member Hear About Prosper Place</td><td><textarea id="HowDidMemberHearAboutProsperPlace" class="isEdittable isLargeField"></textarea></td></tr>
@@ -819,7 +819,7 @@
                 <tr><td>Other Reason</td><td><textarea id="OtherReason" class="isEdittable isLargeField"></textarea></td></tr>
                 <tr><td>Anything else member wants to achieve ?</td><td><textarea id="Anythingelsememberwantstoachieve" class="isEdittable isLargeField"></textarea></td></tr>
                 <tr><td>Challenges getting to Prosper Place ?</td><td><textarea id="ChallengesgettingtoProsperPlace" class="isEdittable isLargeField"></textarea></td></tr>
-                <tr><td>Currently attending or have attended other programs?</td><td><input id="Currentlyattendingorhaveattendedotherprograms" type="checkbox" class="isEdittable"> </td></tr>
+                <tr><td>Currently attending or have attended other programs?</td><td><input id="Currentlyattendingorhaveattendedotherprograms" type="checkbox" class="isEdittable isRequired "> </td></tr>
                 <tr><td>Other Program Notes</td><td><textarea id="OtherProgramNotes" class="isEdittable isLargeField"></textarea></td></tr>
                 <tr><td>Skills and Strengths</td><td><textarea id="SkillsandStrengths" class="isEdittable isLargeField"></textarea></td></tr>
 
@@ -828,7 +828,7 @@
                 <!--************************************************************************-->
                 <tr><td class="SubSection">Goals</td><td /></tr>
 
-                <tr><td>Goal Plan Created ?</td><td><input id="GoalPlanCreated" type="checkbox" class="isEdittable"> </td></tr>
+                <tr><td>Goal Plan Created ?</td><td><input id="GoalPlanCreated" type="checkbox" class="isEdittable isRequired "> </td></tr>
                 <tr><td>Goals</td><td><textarea id="Goals" class="isEdittable isLargeField"></textarea></td></tr>
                 <tr><td>Challenges Achieving Goals ?</td><td><textarea id="ChallengesAchievingGoals" class="isEdittable isLargeField"></textarea></td></tr>
 
@@ -873,9 +873,9 @@
                 <!--SubSection Other                                      -->
                 <!--************************************************************************-->
                 <tr><td class="SubSection">Other</td><td /></tr>
-                <tr><td>Outreach ?</td><td><input id="Outreach" type="checkbox" class="isEdittable"> </td></tr>
-                <tr><td>Is Society Member ?</td><td><input id="IsSocietyMember" type="checkbox" class="isEdittable"> </td></tr>
-                <tr><td>Society Membership Paid ?</td><td><input id="SocietyMembershipPaid" type="checkbox" class="isEdittable"> </td></tr>
+                <tr><td>Outreach ?</td><td><input id="Outreach" type="checkbox" class="isEdittable isRequired "> </td></tr>
+                <tr><td>Is Society Member ?</td><td><input id="IsSocietyMember" type="checkbox" class="isEdittable isRequired "> </td></tr>
+                <tr><td>Society Membership Paid ?</td><td><input id="SocietyMembershipPaid" type="checkbox" class="isEdittable isRequired "> </td></tr>
                 <tr><td>Society Membership Date</td><td><input id="SocietyMembershipDate" type="text" class="isDateTimePicker  isEdittable"> </td></tr>
                 <tr>
                     <td>Member Status</td>
@@ -888,7 +888,7 @@
                     </td>
                 </tr>
 
-                <tr><td>Member Wants To Be Contacted ?</td><td><input id="MemberWantsToBeContacted" type="checkbox" class="isEdittable"></td></tr>
+                <tr><td>Member Wants To Be Contacted ?</td><td><input id="MemberWantsToBeContacted" type="checkbox" class="isEdittable isRequired "></td></tr>
 
             </table>
         </fieldset>
@@ -901,10 +901,10 @@
 
             <table id="tblForms" class="tableMaintain">
 
-                <tr><td>Release of Info Form Complete ?</td><td><input id="ReleaseofInfoFormComplete" type="checkbox" class="isEdittable"> </td></tr>
-                <tr><td>Employment Survey Form Complete ?</td><td><input id="EmploymentSurveyFormComplete" type="checkbox" class="isEdittable"> </td></tr>
-                <tr><td>Code of Conduct Form Complete ?</td><td><input id="CodeofConductFormComplete" type="checkbox" class="isEdittable"> </td></tr>
-                <tr><td>Photo/Video Release Form Complete ?</td><td><input id="PhotoVideoReleaseFormComplete" type="checkbox" class="isEdittable"> </td></tr>
+                <tr><td>Release of Info Form Complete ?</td><td><input id="ReleaseofInfoFormComplete" type="checkbox" class="isEdittable isRequired "> </td></tr>
+                <tr><td>Employment Survey Form Complete ?</td><td><input id="EmploymentSurveyFormComplete" type="checkbox" class="isEdittable isRequired "> </td></tr>
+                <tr><td>Code of Conduct Form Complete ?</td><td><input id="CodeofConductFormComplete" type="checkbox" class="isEdittable isRequired "> </td></tr>
+                <tr><td>Photo/Video Release Form Complete ?</td><td><input id="PhotoVideoReleaseFormComplete" type="checkbox" class="isEdittable isRequired "> </td></tr>
 
             </table>
         </fieldset>
@@ -923,7 +923,7 @@
                 <!--************************************************************************-->
                 <tr><td class="SubSection">Current Employment</td><td /></tr>
 
-                <tr><td>Currently Employed ?</td><td><input id="CurrentlyEmployed" type="checkbox" class="isEdittable"> </td></tr>
+                <tr><td>Currently Employed ?</td><td><input id="CurrentlyEmployed" type="checkbox" class="isEdittable isRequired "> </td></tr>
 
                 <tr>
                     <td>Current Or Previous Occupation</td>
@@ -1079,7 +1079,7 @@
                 <!--************************************************************************-->
                 <tr><td class="SubSection">Seeking Employment</td><td /></tr>
 
-                <tr><td>Currently Volunteering ?</td><td><input id="CurrentlyVolunteering" type="checkbox" class="isEdittable"> </td></tr>
+                <tr><td>Currently Volunteering ?</td><td><input id="CurrentlyVolunteering" type="checkbox" class=" isRequired isEdittable"> </td></tr>
                 <tr><td>Want To Volunteer ?</td><td><input id="WantToVolunteer" type="checkbox" class="isEdittable"> </td></tr>
                 <tr><td>Volunteering Location</td><td><textarea id="VolunteeringLocation" class="isEdittable isLargeField"></textarea></td></tr>
 
